--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,8 +3,9 @@ include MANIFEST.in
 include README.md
 include setup.py
 include *.h
-include pyxie/include/*.h
-
+include bin/include/*.h
+include pyxie
+recursive-include pyxie *.*
 
 
 
