--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,9 +3,8 @@ include MANIFEST.in
 include README.md
 include setup.py
 include *.h
-include bin/include/*.h
-include pyxie
-recursive-include pyxie *.*
+include pyxie/include/*.h
+
 
 
 
